renamed container to darkmode wrap fix

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -7,7 +7,7 @@
 
 }
 
-.Card-container {
+.dark-mode {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
